feat: add calendar

--- a/prepros.config
+++ b/prepros.config
@@ -879,6 +879,25 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "#source/calendar-style.scss",
+        "config": {
+          "customOutput": "css\\calendar-style.css"
+        }
+      },
+      {
+        "file": "#source/common-style.scss",
+        "config": {
+          "customOutput": "css\\common-style.css"
+        }
+      },
+      {
+        "file": "#source/index-style.scss",
+        "config": {
+          "customOutput": "css\\index-style.css"
+        }
+      }
+    ]
   }
 }
